iac/bicep/deploy/deployment.yaml


apiVersion: v1
kind: Service
metadata:
  name: backend-v1
  namespace: azure-alb-system
spec:
  selector:
    app: backend-v1
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-v1
  namespace: azure-alb-system
  labels:
    app: backend-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-v1
  template:
    metadata:
      labels:
        app: backend-v1
    spec:
      containers:
      - name: backend-v1
        image: gcr.io/k8s-staging-ingressconformance/echoserver:v20221109-7ee2f3e
        lifecycle:
          preStop:
            exec:
              command: ["sleep", "10"]
        resources:
          requests:
            cpu: 10m
---
apiVersion: v1
kind: Service
metadata:
  name: backend-v2
  namespace: azure-alb-system
spec:
  selector:
    app: backend-v2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-v2
  namespace: azure-alb-system
  labels:
    app: backend-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-v2
  template:
    metadata:
      labels:
        app: backend-v2
    spec:
      containers:
      - name: backend-v2
        image: gcr.io/k8s-staging-ingressconformance/echoserver:v20221109-7ee2f3e
        resources:
          requests:
            cpu: 10m
