iac/bicep/deploy/signalrhub.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: signalr-hub
  namespace: azure-resources
  labels:
    app: signalr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: signalr
  template:
    metadata:
      labels:
        app: signalr
    spec:
      containers:
        - name: signalr-hub
          image: datasynchroacr.azurecr.io/signalr-hub:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: signalr-service
  namespace: azure-resources
  labels:
    app: signalr

spec:
  selector:
    app: signalr
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
