iac/bicep/deploy/webapi-query.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-api-query-app
  namespace: azure-resources
  labels:
    app: web-api-query
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-api-query
  template:
    metadata:
      labels:
        app: web-api-query
    spec:
      containers:
        - name: web-api-query-app
          image: datasynchroacr.azurecr.io/web-api-query:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: web-api-query-service
  namespace: azure-resources
  labels:
    app: web-api-query

spec:
  selector:
    app: web-api-query
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
