iac/bicep/deploy/http-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webapps-route
  namespace: azure-resources
  
spec:
  parentRefs:
    - name: gateway-01
      namespace: azure-resources
  rules:
    # Route /signalr/ to signalr-service
    - matches:
        - path:
            type: PathPrefix
            value: /signalr/
      backendRefs:
        - name: signalr-service
          port: 80

    # Route /webapp/ to webapp-service
    - matches:
        - path:
            type: PathPrefix
            value: /webapp/
      backendRefs:
        - name: webapp-service
          port: 80
